# TERMINUS

./: .gitignore  README.md  Slack_app_setup.md
simple_mcp/: README.md  amzing.json  chat_history.db  pyproject.toml
simple_mcp/client/: Dockerfile  chat_history.db  client.py  db_utils.py  docker-compose.yaml  mcp_slack_client.py  requirements.txt
simple_mcp/src/terminal_mcp/: __init__.py  server.py
