[project]
name = "terminal-mcp"
version = "0.1.0"
description = "Terminal MCP Server using FastMCP"
authors = [
    {name = "Arunbh Yashaswi", email = "arunbhy@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "anthropic>=0.66.0",
    "boto3>=1.38.42",
    "fastapi>=0.115.0",
    "fastmcp",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "requests>=2.32.4",
    "slack-sdk>=3.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
terminal-mcp = "terminal_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/terminal-mcp"
Repository = "https://github.com/yourusername/terminal-mcp"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]
